<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/sound_settings">
        <SwitchPreferenceCompat
            android:key="sound_effects"
            android:title="@string/enable_sound_effects"
            android:defaultValue="true" />
        <SeekBarPreference
            android:key="volume"
            android:title="@string/volume"
            android:defaultValue="50"
            android:max="100" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/theme_settings">
        <SwitchPreferenceCompat
            android:key="dark_mode"
            android:title="@string/enable_dark_mode"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/language_settings">
        <ListPreference
            android:key="language"
            android:title="@string/language"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="en" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/account_settings">
        <Preference
            android:key="reset_score"
            android:title="@string/reset_score"
            android:summary="@string/reset_score_summary"
            />
        <Preference
            android:key="delete_account"
            android:title="@string/delete_account"
            android:summary="@string/delete_account_summary"
            />
    </PreferenceCategory>

</PreferenceScreen>