<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.uma.quiziosity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="es.uma.quiziosity.ui.login.LoginFragment"
        android:label="@string/action_sign_in"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="es.uma.quiziosity.ui.leaderboard.LeaderboardFragment"
        android:label="Leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="es.uma.quiziosity.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

</navigation>